--- a/index.html
+++ b/index.html
@@ -101,5 +101,66 @@
         <h2>¿Qué quieres ver hoy?</h2>
         <input class="input-text" type="text" name="" id="" placeholder="Buscar...">
     </main>
+
+    <style>
+        .carousel{
+            width: 100%;
+            overflow: scroll;
+            padding: 30px;
+            position: relative;
+        }
+
+        .carousel .container{
+            white-space: nowrap;
+            margin: 70px 0;
+            padding-bottom: 10px;
+        }
+        .carousel .container .item {
+            background-color: chartreuse;
+            width:200px;
+            height: 250px;
+            border-radius: 20px;
+            overflow: hidden;
+            margin-right: 10px;
+            display: inline-block;
+            cursor: pointer;
+            transition: 450ms;
+            transform-origin: center left;
+        }
+
+        .carousel .container .item:hover ~ .item {
+            transform: translate3d(100px, 0, 0);
+        }
+
+        .carousel .container:hover .item {
+            opacity: .3;
+        }
+
+        .carousel .container:hover .item:hover {
+            transform: scale(1.5);
+            opacity: 1;
+        }
+
+    </style>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="item">
+
+            </div>
+
+            <div class="item">
+
+            </div>
+
+            <div class="item">
+
+            </div>
+
+            <div class="item">
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
