--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         margin: 0;
         background-color: #8f57fd;
         font-family: 'Poppins', sans-serif;
+        color: #ffffff;
     }
 
     header{
@@ -54,7 +55,11 @@
 
     .header-menu-profile {
         display: inline-flex;
-        align-items: end;
+        align-carousel-items: end;
+    }
+
+    main{
+        text-align: center;
     }
 
     main h2{
@@ -68,8 +73,9 @@
         font-family: 'Poppins', sans-serif;
         font-size: 1.4rem;
         padding: 0 1rem;
-        width: 70%;
+        width: 40%;
         background-color: rgba(255, 255, 255, .1);
+        outline: none;
     }
 
     ::placeholder{
@@ -106,6 +112,8 @@
         .carousel{
             width: 100%;
             overflow: scroll;
+            
+
             padding: 30px;
             position: relative;
         }
@@ -114,8 +122,10 @@
             white-space: nowrap;
             margin: 70px 0;
             padding-bottom: 10px;
+
+            
         }
-        .carousel .container .item {
+        .carousel .container .carousel-item {
             background-color: chartreuse;
             width:200px;
             height: 250px;
@@ -126,38 +136,98 @@
             cursor: pointer;
             transition: 450ms;
             transform-origin: center left;
+            position: relative;
         }
 
-        .carousel .container .item:hover ~ .item {
+        .carousel .container .carousel-item:hover ~ .carousel-item {
             transform: translate3d(100px, 0, 0);
         }
 
-        .carousel .container:hover .item {
+        .carousel .container:hover .carousel-item {
             opacity: .3;
         }
 
-        .carousel .container:hover .item:hover {
+        .carousel .container:hover .carousel-item:hover {
             transform: scale(1.5);
+            opacity: 1;
+        }
+
+        .carousel-item__img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }      
+
+        .carousel-item__details{
+            background: linear-gradient(to top, rgba(0, 0, 0, .9) 0%, rgba(0, 0, 0, 0) 100%);
+            font-size: 10px;
+            opacity: 0;
+            transition: 450ms opacity;
+            padding: 10px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        .carousel-item:hover .carousel-item__details{
             opacity: 1;
         }
 
     </style>
 
     <section class="carousel">
+        <p>Mi lista</p>
         <div class="container">
-            <div class="item">
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://source.unsplash.com/random?movie" alt="">
+
+                <section class="carousel-item__details">
+                    <div>
+                        <img src="./img/play-icon.png" alt="play">
+                        <img src="./img/plus-icon.png" alt="plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 Minutos</p>
+                </section>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://source.unsplash.com/random?movie2" alt="">
+
+                <section class="carousel-item__details">
+                    <div>
+                        <img src="./img/play-icon.png" alt="play">
+                        <img src="./img/plus-icon.png" alt="plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 Minutos</p>
+                </section>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://source.unsplash.com/random?movie3" alt="">
+
+                <section class="carousel-item__details">
+                    <div>
+                        <img src="./img/play-icon.png" alt="play">
+                        <img src="./img/plus-icon.png" alt="plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 Minutos</p>
+                </section>
+            </div>
+
+            <div class="carousel-item">
 
             </div>
 
-            <div class="item">
+            <div class="carousel-item">
 
             </div>
 
-            <div class="item">
-
-            </div>
-
-            <div class="item">
+            <div class="carousel-item">
 
             </div>
         </div>
