--- a/login.html
+++ b/login.html
@@ -9,6 +9,17 @@
     <title>Codecimal Video</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: #ab88ff;
+        }
+        header{
+            background-color: #21c08b;
+            margin:0;
+            padding: 0 18rem;
+        }
+    </style>
+
     <header>
         <img src="./img/logo.png" alt="Logo Codecimal Video">
     </header>
@@ -18,7 +29,7 @@
             <h2>Inicia sesión</h2>
             <form class="login__container--form">
                 <input class="input" type="text" name="" id="" placeholder="Correo">
-                <input class="input" type="password" name="" id="Contraseña">
+                <input class="input" type="password" name="" id="" placeholder="Contraseña">
                 <button class="button">Iniciar sesión</button>
 
                 <div class="login__container--remember-me">
@@ -26,7 +37,7 @@
                         <input type="checkbox" name="" id="cbox1" value="checkbox">Recuérdame
                     </label>
 
-                    <a href="/">Olvidé mi contraseña</a>
+                    <a href="">Olvidé mi contraseña</a>
 
                 </div>
 
@@ -34,17 +45,17 @@
 
             <section class="login__container--social-media">
                 <div>
-                    <img src="" alt="Google">
+                    <img src="./img/google-icon.png" alt="Google">
                     Inicia sesión con Google
                 </div>
 
                 <div>
-                    <img src="" alt="Twitter">
+                    <img src="./img/twitter-icon.png" alt="Twitter">
                     Inicia sesión con Twitter
                 </div>
             </section>
 
-            <p class="login_container--register">
+            <p class="login__container--register">
                 No tienes ninguna cuenta <a href="">Regístrate</a>
             </p>
         </section>
